# serializer version: 1
# name: test_build_test_scenarios[example0]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-e656679f/example-a-e656679f-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-a-e656679f-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_e656679f"]
        
        [project]
        name = "example-a-e656679f"
        version = "1.0.0"
        dependencies = [
            '''example-b-e656679f>1.0.0''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/example-a-e656679f-1.0.0/src/example_a_e656679f/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-e656679f/example-b-e656679f-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-b-e656679f-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_e656679f"]
        
        [project]
        name = "example-b-e656679f"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/example-b-e656679f-1.0.0/src/example_b_e656679f/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-e656679f/example-b-e656679f-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-b-e656679f-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_e656679f"]
        
        [project]
        name = "example-b-e656679f"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/example-b-e656679f-2.0.0/src/example_b_e656679f/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-e656679f/example-b-e656679f-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-b-e656679f-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_e656679f"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_e656679f"]
        
        [project]
        name = "example-b-e656679f"
        version = "3.0.0"
        dependencies = [
            '''example-c-e656679f''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-e656679f/example-b-e656679f-3.0.0/src/example_b_e656679f/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-e656679f/example-e656679f-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-e656679f/example-e656679f-0.0.0/pyproject.toml': 'md5:96752d280dd77ca50d812849ae856f54',
      'build/example-e656679f/example-e656679f-0.0.0/src/example_e656679f/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-e656679f/example_a_e656679f-1.0.0-py3-none-any.whl': 'md5:ac5a44b21de1588d29eda5067abc1bce',
      'dist/example-e656679f/example_a_e656679f-1.0.0.tar.gz': 'md5:4652b58b9ca9392a7a07a0e91f197cad',
      'dist/example-e656679f/example_b_e656679f-1.0.0-py3-none-any.whl': 'md5:3b29e16e6c54335637a9ff724e9ca95e',
      'dist/example-e656679f/example_b_e656679f-1.0.0.tar.gz': 'md5:3a59e6b6de26922b7723e26b326620f6',
      'dist/example-e656679f/example_b_e656679f-2.0.0-py3-none-any.whl': 'md5:3eed5624834cf11c466c37e5ba66b5cf',
      'dist/example-e656679f/example_b_e656679f-2.0.0.tar.gz': 'md5:5570405bc5da29b294d146ad4fc81a1f',
      'dist/example-e656679f/example_b_e656679f-3.0.0-py3-none-any.whl': 'md5:dcf96fa3b05d8cba480df05af93bf732',
      'dist/example-e656679f/example_b_e656679f-3.0.0.tar.gz': 'md5:74360812ea4731b43067b918276cadbb',
      'dist/example-e656679f/example_e656679f-0.0.0.tar.gz': 'md5:ac7d30ef08a71210b676995b947fba48',
      'tree': '''
        test_build_test_scenarios_exam0
        ├── build
        │   └── example-e656679f
        │       ├── example-a-e656679f-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_e656679f
        │       │           └── __init__.py
        │       ├── example-b-e656679f-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_e656679f
        │       │           └── __init__.py
        │       ├── example-b-e656679f-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_e656679f
        │       │           └── __init__.py
        │       ├── example-b-e656679f-3.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_e656679f
        │       │           └── __init__.py
        │       └── example-e656679f-0.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_e656679f
        │                   └── __init__.py
        └── dist
            └── example-e656679f
                ├── example_a_e656679f-1.0.0-py3-none-any.whl
                ├── example_a_e656679f-1.0.0.tar.gz
                ├── example_b_e656679f-1.0.0-py3-none-any.whl
                ├── example_b_e656679f-1.0.0.tar.gz
                ├── example_b_e656679f-2.0.0-py3-none-any.whl
                ├── example_b_e656679f-2.0.0.tar.gz
                ├── example_b_e656679f-3.0.0-py3-none-any.whl
                ├── example_b_e656679f-3.0.0.tar.gz
                └── example_e656679f-0.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-e656679f
  
    ''',
  })
# ---
# name: test_build_test_scenarios[example1]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-toml-1b8d92d0/example-toml-1b8d92d0-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-1b8d92d0-0.0.0/pyproject.toml': 'md5:515fdc998762f54de5c067b824f216b8',
      'build/example-toml-1b8d92d0/example-toml-1b8d92d0-0.0.0/src/example_toml_1b8d92d0/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-a-1b8d92d0-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-a-1b8d92d0-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_a_1b8d92d0"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_a_1b8d92d0"]
        
        [project]
        name = "example-toml-a-1b8d92d0"
        version = "1.0.0"
        dependencies = [
            '''example-toml-b-1b8d92d0>1.0.0''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-a-1b8d92d0-1.0.0/src/example_toml_a_1b8d92d0/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-b-1b8d92d0-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-b-1b8d92d0-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_1b8d92d0"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_1b8d92d0"]
        
        [project]
        name = "example-toml-b-1b8d92d0"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-b-1b8d92d0-1.0.0/src/example_toml_b_1b8d92d0/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-b-1b8d92d0-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-b-1b8d92d0-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_1b8d92d0"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_1b8d92d0"]
        
        [project]
        name = "example-toml-b-1b8d92d0"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-b-1b8d92d0-2.0.0/src/example_toml_b_1b8d92d0/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-b-1b8d92d0-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-b-1b8d92d0-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_1b8d92d0"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_1b8d92d0"]
        
        [project]
        name = "example-toml-b-1b8d92d0"
        version = "3.0.0"
        dependencies = [
            '''example-toml-c-1b8d92d0''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-1b8d92d0/example-toml-b-1b8d92d0-3.0.0/src/example_toml_b_1b8d92d0/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-toml-1b8d92d0/example_toml_1b8d92d0-0.0.0.tar.gz': 'md5:58187fdea5b394838cf121c7313ed088',
      'dist/example-toml-1b8d92d0/example_toml_a_1b8d92d0-1.0.0-py3-none-any.whl': 'md5:31268d0eb94e6f1d1f09e5f4be94b2cf',
      'dist/example-toml-1b8d92d0/example_toml_a_1b8d92d0-1.0.0.tar.gz': 'md5:09e7946f330dbd7264b7e9c27cc7bb81',
      'dist/example-toml-1b8d92d0/example_toml_b_1b8d92d0-1.0.0-py3-none-any.whl': 'md5:9037113bdaf07319725004436a2ad6d7',
      'dist/example-toml-1b8d92d0/example_toml_b_1b8d92d0-1.0.0.tar.gz': 'md5:dcde2f5322c9409a0bcd59ad89f75fd4',
      'dist/example-toml-1b8d92d0/example_toml_b_1b8d92d0-2.0.0-py3-none-any.whl': 'md5:cf7f7bb7fc40a1c9f28937d8c9a56ef9',
      'dist/example-toml-1b8d92d0/example_toml_b_1b8d92d0-2.0.0.tar.gz': 'md5:ec16c3e79d8726eb86e70de559deca3f',
      'dist/example-toml-1b8d92d0/example_toml_b_1b8d92d0-3.0.0-py3-none-any.whl': 'md5:77c6f38d8e669973194b541f38d170ed',
      'dist/example-toml-1b8d92d0/example_toml_b_1b8d92d0-3.0.0.tar.gz': 'md5:639b7e7e8d19d70a47e579ed1cf30ccd',
      'tree': '''
        test_build_test_scenarios_exam1
        ├── build
        │   └── example-toml-1b8d92d0
        │       ├── example-toml-1b8d92d0-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_1b8d92d0
        │       │           └── __init__.py
        │       ├── example-toml-a-1b8d92d0-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_a_1b8d92d0
        │       │           └── __init__.py
        │       ├── example-toml-b-1b8d92d0-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_b_1b8d92d0
        │       │           └── __init__.py
        │       ├── example-toml-b-1b8d92d0-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_b_1b8d92d0
        │       │           └── __init__.py
        │       └── example-toml-b-1b8d92d0-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_toml_b_1b8d92d0
        │                   └── __init__.py
        └── dist
            └── example-toml-1b8d92d0
                ├── example_toml_1b8d92d0-0.0.0.tar.gz
                ├── example_toml_a_1b8d92d0-1.0.0-py3-none-any.whl
                ├── example_toml_a_1b8d92d0-1.0.0.tar.gz
                ├── example_toml_b_1b8d92d0-1.0.0-py3-none-any.whl
                ├── example_toml_b_1b8d92d0-1.0.0.tar.gz
                ├── example_toml_b_1b8d92d0-2.0.0-py3-none-any.whl
                ├── example_toml_b_1b8d92d0-2.0.0.tar.gz
                ├── example_toml_b_1b8d92d0-3.0.0-py3-none-any.whl
                └── example_toml_b_1b8d92d0-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-toml-1b8d92d0
  
    ''',
  })
# ---
# name: test_build_test_scenarios[example2]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-yaml-41a12a49/example-yaml-41a12a49-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-41a12a49-0.0.0/pyproject.toml': 'md5:bc2009cd09c9473d3d4b219dabfd00db',
      'build/example-yaml-41a12a49/example-yaml-41a12a49-0.0.0/src/example_yaml_41a12a49/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-a-41a12a49-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-a-41a12a49-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_a_41a12a49"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_a_41a12a49"]
        
        [project]
        name = "example-yaml-a-41a12a49"
        version = "1.0.0"
        dependencies = [
            '''example-yaml-b-41a12a49>1.0.0''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-a-41a12a49-1.0.0/src/example_yaml_a_41a12a49/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-b-41a12a49-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-b-41a12a49-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_41a12a49"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_41a12a49"]
        
        [project]
        name = "example-yaml-b-41a12a49"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-b-41a12a49-1.0.0/src/example_yaml_b_41a12a49/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-b-41a12a49-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-b-41a12a49-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_41a12a49"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_41a12a49"]
        
        [project]
        name = "example-yaml-b-41a12a49"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-b-41a12a49-2.0.0/src/example_yaml_b_41a12a49/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-b-41a12a49-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-b-41a12a49-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_41a12a49"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_41a12a49"]
        
        [project]
        name = "example-yaml-b-41a12a49"
        version = "3.0.0"
        dependencies = [
            '''example-yaml-c-41a12a49''',
        ]
        requires-python = ">=3.12"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-41a12a49/example-yaml-b-41a12a49-3.0.0/src/example_yaml_b_41a12a49/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-yaml-41a12a49/example_yaml_41a12a49-0.0.0.tar.gz': 'md5:e9da11179ea5ccb6ef07a275c8b029b8',
      'dist/example-yaml-41a12a49/example_yaml_a_41a12a49-1.0.0-py3-none-any.whl': 'md5:2d18b4892744b065f4f9d6236a33d2aa',
      'dist/example-yaml-41a12a49/example_yaml_a_41a12a49-1.0.0.tar.gz': 'md5:4a697bca6006ac40b11a0f380dbb1d4b',
      'dist/example-yaml-41a12a49/example_yaml_b_41a12a49-1.0.0-py3-none-any.whl': 'md5:0a4ecf043255822b22729edc191a7130',
      'dist/example-yaml-41a12a49/example_yaml_b_41a12a49-1.0.0.tar.gz': 'md5:cbed660964edfc640ff6b2aa327ee89f',
      'dist/example-yaml-41a12a49/example_yaml_b_41a12a49-2.0.0-py3-none-any.whl': 'md5:f7c2ec347ffdc6d00b409a6c4566c580',
      'dist/example-yaml-41a12a49/example_yaml_b_41a12a49-2.0.0.tar.gz': 'md5:e7a5a93b98bb582f575e332eabaab990',
      'dist/example-yaml-41a12a49/example_yaml_b_41a12a49-3.0.0-py3-none-any.whl': 'md5:a8d73f3a62ed5c342bc28141f9545088',
      'dist/example-yaml-41a12a49/example_yaml_b_41a12a49-3.0.0.tar.gz': 'md5:37695991d11d55e0c2c97b117584d330',
      'tree': '''
        test_build_test_scenarios_exam2
        ├── build
        │   └── example-yaml-41a12a49
        │       ├── example-yaml-41a12a49-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_41a12a49
        │       │           └── __init__.py
        │       ├── example-yaml-a-41a12a49-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_a_41a12a49
        │       │           └── __init__.py
        │       ├── example-yaml-b-41a12a49-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_b_41a12a49
        │       │           └── __init__.py
        │       ├── example-yaml-b-41a12a49-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_b_41a12a49
        │       │           └── __init__.py
        │       └── example-yaml-b-41a12a49-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_yaml_b_41a12a49
        │                   └── __init__.py
        └── dist
            └── example-yaml-41a12a49
                ├── example_yaml_41a12a49-0.0.0.tar.gz
                ├── example_yaml_a_41a12a49-1.0.0-py3-none-any.whl
                ├── example_yaml_a_41a12a49-1.0.0.tar.gz
                ├── example_yaml_b_41a12a49-1.0.0-py3-none-any.whl
                ├── example_yaml_b_41a12a49-1.0.0.tar.gz
                ├── example_yaml_b_41a12a49-2.0.0-py3-none-any.whl
                ├── example_yaml_b_41a12a49-2.0.0.tar.gz
                ├── example_yaml_b_41a12a49-3.0.0-py3-none-any.whl
                └── example_yaml_b_41a12a49-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-yaml-41a12a49
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example0]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp0
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-e656679f
      ├── environment
      │   └── python3.12
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example1]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp1
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-toml-1b8d92d0
      ├── environment
      │   └── python3.12
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example2]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp2
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-yaml-41a12a49
      ├── environment
      │   └── python3.12
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
